// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcModal displays input 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" allowoutsideclick="true" clickoutsidedeactivates="false" delayinitialfocus="true" escapedeactivates="true" initialfocus="[Function]" preventscroll="false" returnfocusondeactivate="true" setreturnfocus="false">
    <div aria-modal="true" class="oc-modal oc-modal-passive" role="dialog" tabindex="0">
      <div class="oc-modal-title">
        <!--v-if-->
        <h2 class="oc-text-truncate" id="oc-modal-title">Create new folder</h2>
      </div>
      <div class="oc-modal-body">
        <!--v-if-->
        <!--v-if-->
        <oc-text-input-stub class="oc-modal-body-input" clearbuttonaccessiblelabel="" clearbuttonenabled="false" disabled="false" fixmessageline="true" id="oc-textinput-1" label="Folder name" modelvalue="New folder" passwordpolicy="[object Object]" readonly="false" type="text"></oc-text-input-stub>
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <oc-button-stub appearance="outline" class="oc-modal-body-actions-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
        <oc-button-stub appearance="filled" class="oc-modal-body-actions-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="primary">Confirm</oc-button-stub>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;

exports[`OcModal hides icon if not specified 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" allowoutsideclick="true" clickoutsidedeactivates="false" delayinitialfocus="true" escapedeactivates="true" initialfocus="[Function]" preventscroll="false" returnfocusondeactivate="true" setreturnfocus="false">
    <div aria-modal="true" class="oc-modal oc-modal-passive" role="dialog" tabindex="0">
      <div class="oc-modal-title">
        <!--v-if-->
        <h2 class="oc-text-truncate" id="oc-modal-title">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <p class="oc-modal-body-message oc-mt-rm oc-mb-rm">Example message</p>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <oc-button-stub appearance="outline" class="oc-modal-body-actions-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
        <oc-button-stub appearance="filled" class="oc-modal-body-actions-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="primary">Confirm</oc-button-stub>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;

exports[`OcModal matches snapshot 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" allowoutsideclick="true" clickoutsidedeactivates="false" delayinitialfocus="true" escapedeactivates="true" initialfocus="[Function]" preventscroll="false" returnfocusondeactivate="true" setreturnfocus="false">
    <div aria-modal="true" class="oc-modal oc-modal-passive" role="dialog" tabindex="0">
      <div class="oc-modal-title">
        <oc-icon-stub accessiblelabel="" color="" filltype="fill" name="info" size="medium" type="span" variation="passive"></oc-icon-stub>
        <h2 class="oc-text-truncate" id="oc-modal-title">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <p class="oc-modal-body-message oc-mt-rm oc-mb-rm">Example message</p>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <oc-button-stub appearance="outline" class="oc-modal-body-actions-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
        <oc-button-stub appearance="filled" class="oc-modal-body-actions-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="primary">Confirm</oc-button-stub>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;

exports[`OcModal overrides props message with slot 1`] = `
<div aria-labelledby="oc-modal-title" class="oc-modal-background">
  <focus-trap-stub active="true" allowoutsideclick="true" clickoutsidedeactivates="false" delayinitialfocus="true" escapedeactivates="true" initialfocus="[Function]" preventscroll="false" returnfocusondeactivate="true" setreturnfocus="false">
    <div aria-modal="true" class="oc-modal oc-modal-passive" role="dialog" tabindex="0">
      <div class="oc-modal-title">
        <!--v-if-->
        <h2 class="oc-text-truncate" id="oc-modal-title">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <div class="oc-modal-body-message">
          <p>Slot message</p>
        </div>
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <oc-button-stub appearance="outline" class="oc-modal-body-actions-cancel" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="passive">Cancel</oc-button-stub>
        <oc-button-stub appearance="filled" class="oc-modal-body-actions-confirm oc-ml-s" disabled="false" gapsize="medium" justifycontent="center" showspinner="false" size="medium" style="min-width: 0px;" submit="button" type="button" variation="primary">Confirm</oc-button-stub>
      </div>
    </div>
  </focus-trap-stub>
</div>
`;
